# bible-semantic-drift

./: .gitignore  README.md  pyproject.toml
bible_drift/: __init__.py  alignment.py  cli.py  corpus.py  crosslingual.py  drift.py  embeddings.py  phonetic.py  report.py
bible_drift/greek/: scaffold.py
tests/: test_drift.py
