[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bible-semantic-drift"
version = "0.1.0"
description = "Per-book semantic and phonetic shift analysis across Bible translations using word embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gensim>=4.3",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jellyfish>=1.0",
    "click>=8.1",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
greek = [
    "transformers>=4.38",
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
]

[project.scripts]
bible-drift = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bible_drift*"]
